# cpp_simulation

./: CMakeLists.txt
include/classes/: Polygon.hpp
src/: main.cpp
src/classes/: Polygon.cpp
